--- a/index.html
+++ b/index.html
@@ -112,10 +112,13 @@
       <div class="productDetails">
         <h1 class="productTitle">AIR FORCE</h1>
         <h2 class="productPrice">$199</h2>
-        <p class="productDesc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veniam at nemo tenetur tempora temporibus praesentium quaerat 
-          quibusdam autem eos quos, quo adipisci dolores unde, aut libero aliquam repellat perspiciatis.
-        </p>
+        <div class="DproductDesc">
+          <p class="productDesc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veniam at nemo tenetur tempora temporibus praesentium quaerat 
+            quibusdam autem eos quos, quo adipisci dolores unde, aut libero aliquam repellat perspiciatis.
+          </p>
+        </div>
+        
         <div class="colors">
         <div class="color"></div>
         <div class="color"></div>
