--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <img src="Img/search.png" width="20" height="20" alt="" class="searchIcon" />
             </div>
           </div>
-          <div class="navItem">
+          <div class="brb navItem">
             <span class="limitedOffer">Limited Offer!</span>
           </div>
       </div>
