--- a/index.html
+++ b/index.html
@@ -110,25 +110,25 @@
     <div class="product" id="product">
       <img src="Img/air.png" alt="" class="productImg">
       <div class="productDetails">
-        <h1 class="productTitle">AIR FORCE</h1>
-        <h2 class="productPrice">$199</h2>
-        <div class="DproductDesc">
+        <h1 class="ovh productTitle">AIR FORCE</h1>
+        <h2 class="ovh productPrice">$199</h2>
+        <div class="ovh DproductDesc">
           <p class="productDesc">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veniam at nemo tenetur tempora temporibus praesentium quaerat 
             quibusdam autem eos quos, quo adipisci dolores unde, aut libero aliquam repellat perspiciatis.
           </p>
         </div>
         
-        <div class="colors">
+        <div class="ovh colors">
         <div class="color"></div>
         <div class="color"></div>
       </div>
       <div class="sizes">
-        <div class="size">42</div>
-        <div class="size">43</div>
-        <div class="size">44</div>
+        <div class="ovh size">42</div>
+        <div class="ovh size">43</div>
+        <div class="ovh size">44</div>
       </div>
-      <button class="productButton">BUY NOW!</button>
+      <button class="ovh productButton">BUY NOW!</button>
       </div>
       <div class="payment">
         <h1 class="payTitle">Personal information</h1>
